//-- ./proto/users.proto

syntax = "proto3";

package ledger;

import "common.proto";

service Authentication {
    rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);
    rpc RefreshAuthentication (RefreshAuthenticationRequest) returns (AuthenticateResponse);
    rpc UpdatePassword (UpdatePasswordRequest) returns (AuthenticateResponse);
    rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc Logout (LogoutRequest) returns (Empty);
}

message AuthenticateRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshAuthenticationRequest {
    string refresh_token = 1;
}

message UpdatePasswordRequest {
    string email = 1;
    string original_password = 2;
    string new_password = 3;
}

message ResetPasswordRequest {
    string email = 1;
}

message ResetPasswordResponse {
    string message = 1;
}

message LogoutRequest {
    string id = 1;
} 